--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="user_id">id: %s</string>
     <string name="account_created">Account create date: %s</string>
     <string name="account_last_logged">Last login date: %s</string>
+
+    <!-- ImageDescriptions -->
+    <string name="desc_game_wrapper">game wrapper</string>
 </resources>
