Daniel: added friends list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="user_id">id: %s</string>
     <string name="account_created">Account create date: %s</string>
     <string name="account_last_logged">Last login date: %s</string>
+    <string name="view_friends">View friends</string>
+
+    <!-- FriendsFragment -->
+    <string name="your_friends">Your Friends</string>
 
     <!-- ImageDescriptions -->
     <string name="desc_game_wrapper">game wrapper</string>
